# office-ai-switch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  USER_GUIDE.md  WORD_AI_SWITCH_V2_README.md  package.json  start.example.ps1  word-deepseek-manifest.example.xml  word-switch-v2-gui.ps1  word-switch-v2.py
docs/: GATEWAY_SETUP.md  RELEASE_NOTES_v2.0.0.md
gateway_unified/: .env.example  .gitignore  README.en.md  README.md  pyproject.toml  requirements.txt  run-gateway.ps1
gateway_unified/claude-gateway-rs/: .env.example  .gitignore  Cargo.toml  build-release.bat
gateway_unified/claude-gateway-rs/.cargo/: config.toml
gateway_unified/claude-gateway-rs/src/: config.rs  env.rs  log_mw.rs  main.rs  models.rs  providers.rs  sanitize.rs  stream.rs  web_search.rs
gateway_unified/claude-gateway-rs/tests/: api_test.rs
gateway_unified/scripts/: test_connectivity.py
gateway_unified/src/claude_gateway/: access_auth.py  log_mw.py  main.py  models.py  providers.py  sanitize.py  stream.py  web_search.py
gateway_unified/tests/: test_providers.py  test_sanitize.py  test_web_search.py
scripts/: build_release.ps1  gateway-wrapper.cjs  office_ai_switch_launcher.py
