[package]
name = "claude-gateway-rs"
version = "1.0.0"
edition = "2021"
description = "Claude-compatible API gateway proxy"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1.10"
url = "2.5"
chrono = "0.4.44"
tower = "0.5"
async-stream = "0.3"
lazy_static = "1.5"
html-escape = "0.2"
urlencoding = "2.1"

[dev-dependencies]
rstest = "0.23"
mockall = "0.13"
tokio-test = "0.4"
